--- a/data-challenge/Task.Rmd
+++ b/data-challenge/Task.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Data Science Challenge"
+title: "Data Challenge"
 date: "`r Sys.Date()`"
 output:
   pdf_document:
@@ -45,9 +45,8 @@ Use regression, classification and/or clustering methods to derive insights
 that can support our mission. If you want you can use more than one of these
 approaches.
 
-Execute your approach in R, Python or Julia using a Jupiter Notebook or
-Rmarkdown file for the report. Send us the source code and any file that
-was generated during this task.
+Execute your approach in Python using a Jupiter Notebook. Send us the notebook 
+source code and any file that was generated during this task.
 
 In the report discuss your methodology and justify your choices for the feature
 selection and for the algorithms. Share the insights that you obtained from the
@@ -58,10 +57,7 @@ algorithmic approach; storytelling-, technical-, reporting- and communication-sk
 ## Instructions
 
 - Once you receive the assignment you have 72 hours to return it.
-- We expect that you devote between 6 and 8h to this data challenge.
+- Please do not spend more than 2 or 3h in this data challenge.
 - We recommend that you start by defining the quick wins and how the reader
 will perceive/evaluate your report. Then plan accordingly.
-- Email your code and report to the person that sent you the technical test. 
-- Please do not distribute this test. This is solely intended for the
-candidate's whom received it under the scope of our recruitment process.
-- We appreciate the time and effort that you invest in this challenge. Thank you.
+- Email your code and report to the person that sent you the technical test.
